--- a/src/assets/styles/architectures.scss
+++ b/src/assets/styles/architectures.scss
@@ -98,7 +98,7 @@ html {
     }
     .hero {
       width: 100%;
-      background: url(/static/space-bg.png);
+      background: url(/static/trees-bg.png);
       background-size: cover;
       background-color: white;
       background-position: center;
