--- a/src/assets/styles/about.scss
+++ b/src/assets/styles/about.scss
@@ -112,6 +112,9 @@ html {
               text-transform: uppercase;
               font-size: 0.8rem;
 
+              &.active {
+                color: #1976d2;
+              }
               &:hover {
                 color: #1976d2;
               }
