--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -115,7 +115,9 @@ html {
               margin-left: 2rem;
               text-transform: uppercase;
               font-size: 0.8rem;
-
+              &.active {
+                color: #1976d2;
+              }
               &:hover {
                 color: #1976d2;
               }
