--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -1,175 +1,8 @@
-@font-face {
-  font-family: "Latin Modern";
-  font-style: normal;
-  font-weight: normal;
-  font-display: block;
-  src: url("./LM-regular.woff2") format("woff2"),
-    url("./LM-regular.woff") format("woff"),
-    url("./LM-regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Latin Modern";
-  font-style: italic;
-  font-weight: normal;
-  font-display: block;
-  src: url("./LM-italic.woff2") format("woff2"),
-    url("./LM-italic.woff") format("woff"),
-    url("./LM-italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Latin Modern";
-  font-style: normal;
-  font-weight: bold;
-  font-display: block;
-  src: url("./LM-bold.woff2") format("woff2"),
-    url("./LM-bold.woff") format("woff"),
-    url("./LM-bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Latin Modern";
-  font-style: italic;
-  font-weight: bold;
-  font-display: block;
-  src: url("./LM-bold-italic.woff2") format("woff2"),
-    url("./LM-bold-italic.woff") format("woff"),
-    url("./LM-bold-italic.ttf") format("truetype");
-}
-
-*,
-*:before,
-*:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  max-width: 100%;
-  transition: color 0.2s ease;
-}
-
 html {
-  font-family: "Latin Modern", Garamond;
-
   body {
-    color: black;
-
-    main {
-      min-height: 75vh;
-    }
-    header {
-      width: 100%;
-      background: white;
-      margin: 0;
-      padding: 0;
-
-      .wrapper {
-        display: grid;
-        grid-template-columns: 1fr auto;
-        align-items: center;
-
-        .logo {
-          color: black;
-          font-size: 0;
-          padding: 0.5rem 0;
-
-          img {
-            height: auto;
-            max-width: 160px;
-          }
-        }
-
-        nav {
-          a {
-            color: black;
-            text-decoration: none;
-            font-weight: 500;
-            font-family: "Open Sans";
-            margin-left: 2rem;
-            text-transform: uppercase;
-            font-size: 0.8rem;
-            &.active {
-              color: #1976d2;
-            }
-            &:hover {
-              color: #1976d2;
-            }
-          }
-        }
-      }
-    }
     .hero {
-      width: 100%;
-      background: url(/static/mystic-gate-bg.png);
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-color: black;
-      position: relative;
-      height: 80vh;
-
-      .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 0;
-        background: black;
-        opacity: 0.5;
-      }
-
-      .wrapper {
-        position: relative;
-        z-index: 1;
-        top: 50%;
-        transform: translateY(-50%);
-
-        h1 {
-          font-family: "Open Sans";
-          font-size: 4rem;
-          text-transform: uppercase;
-          line-height: 1;
-          letter-spacing: -0.1rem;
-          margin-bottom: 1rem;
-          max-width: 42rem;
-          color: white;
-        }
-
-        p {
-          color: white;
-          font-size: 1.1rem;
-          font-style: italic;
-          max-width: 35rem;
-          margin-bottom: 2rem;
-        }
-        .button-group {
-          margin-top: 1rem;
-          display: flex;
-
-          .button {
-            background: #1976d2;
-            color: white;
-            padding: 0.5rem 1rem;
-            outline: none;
-            margin-right: 1rem;
-            font-family: "Open Sans";
-            font-weight: bold;
-            text-transform: uppercase;
-            font-size: 0.8rem;
-            display: block;
-            text-decoration: none;
-            border-radius: 3px;
-
-            &:nth-child(2) {
-              background: white;
-              color: black;
-            }
-          }
-        }
-      }
+      background-image: url(/static/mystic-gate-bg.png);
     }
-
     .feed {
       .post {
         background: white;
@@ -191,49 +24,5 @@ html {
         }
       }
     }
-
-    footer {
-      background: #0f0f0f;
-      padding: 2rem 0;
-
-      .wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 2rem;
-
-        .column {
-          h2 {
-            color: white;
-            font-family: "Open Sans";
-            text-transform: uppercase;
-            margin-bottom: 1rem;
-            font-size: 0.8rem;
-          }
-          a {
-            display: block;
-            width: max-content;
-            margin-bottom: 1rem;
-            color: #aaa;
-            font-family: "Open Sans";
-            font-size: 0.8rem;
-          }
-        }
-      }
-    }
-  }
-}
-
-.wrapper {
-  padding: 1rem;
-  max-width: 80rem;
-  margin: 0 auto;
-}
-
-@keyframes slide {
-  0% {
-    transform: translate3d(0, 0, 0);
-  }
-  100% {
-    transform: translate3d(-200vw, 0, 0);
   }
 }
