--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -1,384 +1,22 @@
-@font-face {
-  font-family: "Latin Modern";
-  font-style: normal;
-  font-weight: normal;
-  font-display: block;
-  src: url("./LM-regular.woff2") format("woff2"),
-    url("./LM-regular.woff") format("woff"),
-    url("./LM-regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Latin Modern";
-  font-style: italic;
-  font-weight: normal;
-  font-display: block;
-  src: url("./LM-italic.woff2") format("woff2"),
-    url("./LM-italic.woff") format("woff"),
-    url("./LM-italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Latin Modern";
-  font-style: normal;
-  font-weight: bold;
-  font-display: block;
-  src: url("./LM-bold.woff2") format("woff2"),
-    url("./LM-bold.woff") format("woff"),
-    url("./LM-bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Latin Modern";
-  font-style: italic;
-  font-weight: bold;
-  font-display: block;
-  src: url("./LM-bold-italic.woff2") format("woff2"),
-    url("./LM-bold-italic.woff") format("woff"),
-    url("./LM-bold-italic.ttf") format("truetype");
-}
-
-@-webkit-keyframes pulse {
-  0% {
-    opacity: 0.25;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.25;
-  }
-}
-
-@keyframes pulse {
-  0% {
-    opacity: 0.25;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0.25;
-  }
-}
-
-*,
-*:before,
-*:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  max-width: 100%;
-  transition: color 0.2s ease;
-}
-
-p {
-  margin-bottom: 1rem;
-}
-
 html {
-  font-family: "Latin Modern", Garamond;
 
   body {
-    color: black;
-    background: #f7f7f7;
-
-    .home {
-      header {
-        width: 100%;
-        background: white;
-        margin: 0;
-        padding: 0;
-
-        .wrapper {
-          display: grid;
-          grid-template-columns: 1fr auto;
-          align-items: center;
-
-          .logo {
-            color: black;
-            font-size: 0;
-            padding: 0.5rem 0;
-
-            img {
-              height: auto;
-              max-width: 160px;
-            }
-          }
-
-          nav {
-            a {
-              color: black;
-              text-decoration: none;
-              font-weight: 500;
-              font-family: "Open Sans";
-              margin-left: 2rem;
-              text-transform: uppercase;
-              font-size: 0.8rem;
-              &.active {
-                color: #1976d2;
-              }
-              &:hover {
-                color: #1976d2;
-              }
-            }
-          }
-        }
-      }
-    }
     .hero {
-      width: 100%;
-      background: url(/static/mountain-bg.png);
-      background-size: cover;
-      background-color: white;
-      background-position: center;
-      background-repeat: no-repeat;
-      position: relative;
-      height: 80vh;
-
-      .overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 0;
-        background: black;
-        opacity: 0.5;
-      }
-
-      .wrapper {
-        position: relative;
-        z-index: 1;
-        top: 50%;
-        transform: translateY(-50%);
-
-        h1 {
-          font-family: "Open Sans";
-          font-size: 4rem;
-          text-transform: uppercase;
-          line-height: 1;
-          letter-spacing: -0.1rem;
-          margin-bottom: 1rem;
-          max-width: 42rem;
-          color: white;
-        }
-
-        p {
-          color: white;
-          font-size: 1.1rem;
-          font-style: italic;
-          max-width: 35rem;
-          margin-bottom: 2rem;
-        }
-        .button-group {
-          margin-top: 1rem;
-          display: flex;
-
-          .button {
-            background: #1976d2;
-            color: white;
-            padding: 0.5rem 1rem;
-            outline: none;
-            margin-right: 1rem;
-            font-family: "Open Sans";
-            font-weight: bold;
-            text-transform: uppercase;
-            font-size: 0.8rem;
-            display: block;
-            text-decoration: none;
-            border-radius: 3px;
-
-            &:nth-child(2) {
-              background: white;
-              color: black;
-            }
-          }
-        }
-      }
-    }
-
-    .personal {
-      display: flex;
-      align-items: center;
-
-      .content {
-        flex: 0 0 50%;
-        .wrapper {
-          max-width: 60%;
-
-          p {
-            margin-bottom: 1rem;
-          }
-        }
-      }
-      .image {
-        flex: 0 0 50%;
-        img {
-          display: block;
-        }
-      }
-    }
-
-    // .personal {
-    //   width: 100%;
-    //   background: url(/static/test-profile.jpg);
-    //   background-size: cover;
-    //   background-color: white;
-    //   background-position: top;
-    //   background-repeat: no-repeat;
-    //   position: relative;
-    //   height: 80vh;
-
-    //   .overlay {
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     right: 0;
-    //     bottom: 0;
-    //     z-index: 0;
-    //     background: black;
-    //     opacity: 0.5;
-    //   }
-
-    //   .wrapper {
-    //     position: relative;
-    //     z-index: 1;
-    //     top: 50%;
-    //     transform: translateY(-50%);
-
-    //     h1 {
-    //       font-family: 'Open Sans';
-    //       font-size: 4rem;
-    //       text-transform: uppercase;
-    //       line-height: 1;
-    //       letter-spacing: -0.1rem;
-    //       margin-bottom: 1rem;
-    //       color: white;
-    //       max-width: 42rem;
-    //     }
-
-    //     p {
-    //       color: white;
-    //       font-size: 1.1rem;
-    //       font-style: italic;
-    //       margin-bottom: 2rem;
-    //       max-width: 42rem;
-    //     }
-    //   }
-    // }
-
-    .bar {
-      background: white;
-      .wrapper {
-        p {
-          color: #bbb;
-          text-align: center;
-          font-family: "Open Sans";
-          font-weight: bold;
-          text-transform: uppercase;
-          letter-spacing: 1px;
-          font-size: 0.8rem;
-        }
-
-        .brands {
-          padding: 1rem 0;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-
-          img {
-            max-width: 7rem;
-            max-height: 2rem;
-            filter: opacity(0.25);
-          }
-        }
-      }
-    }
-
-    // .personal {
-    //   display: flex;
-    //   align-items: center;
-    //   background-image: url(/static/brain.svg);
-    //   background-size: 50vw;
-    //   background-repeat: no-repeat;
-    //   background-position: -30%;
-
-    //   .content {
-    //     flex: 0 0 50%;
-    //     position: relative;
-
-    //     .wrapper {
-    //       blockquote {
-    //         padding: 1rem;
-    //         text-align: center;
-    //         font-size: 3rem;
-    //         font-style: italic;
-    //         margin-bottom: 1rem;
-    //       }
-    //       p {
-    //         text-align: center;
-    //       }
-    //     }
-    //   }
-    //   .image {
-    //     flex: 0 0 50%;
-    //     img {
-    //       display: block;
-    //     }
-    //   }
-    // }
-
-    .featured {
-      background: white;
-      padding: 5rem 0;
-
-      blockquote {
-        padding: 1rem;
-        text-align: center;
-        font-size: 3rem;
-        font-style: italic;
-        margin-bottom: 1rem;
-      }
-
-      .wrapper {
-        display: flex;
-        align-items: top;
-        justify-content: space-between;
-
-        .post {
-          flex: 0 0 30%;
-
-          .read-more {
-            display: inline-block;
-            margin: 1rem 0;
-            color: black;
-            font-family: "Open Sans";
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            font-size: 0.8rem;
-          }
-        }
+      background-image: url(/static/mountain-bg.png);
+      .wrapper h1 {
+        max-width: 55%;
       }
     }
 
     .intro {
       background: white;
-      padding: 3rem 0;
+      padding: 4.8rem 0;
       .wrapper {
-        blockquote {
-          padding-bottom: 2rem;
-          text-align: center;
-          font-size: 3rem;
-          font-style: italic;
-        }
-
         .column-wrapper {
           display: flex;
-          align-items: top;
+          align-items: baseline;
           justify-content: space-between;
-          padding: 1rem;
+          padding: 1.6rem;
 
           .column {
             flex: 0 0 30%;
@@ -386,8 +24,8 @@ html {
 
             .icon {
               margin: 0 auto;
-              height: 8rem;
-              width: 8rem;
+              height: 12rem;
+              width: 12rem;
 
               img {
                 width: 100%;
@@ -399,62 +37,39 @@ html {
       }
     }
 
-    .my-research {
-      background: #f7f7f7;
-      padding: 10rem 0;
-      background-image: url(/static/brain.svg);
-      background-size: 45vw;
-      background-repeat: no-repeat;
-      background-position: center left;
-      position: relative;
+    .personal {
+      display: flex;
+      align-items: center;
+      background:#f7f7f7;
 
-      .wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 2rem;
-        align-items: center;
-
-        div {
-          grid-column: 2;
-          h1 {
-            font-size: 2rem;
-            line-height: 1.2;
-            margin-bottom: 1rem;
-            color: black;
-          }
-          p {
-            color: black;
-            font-size: 1.1rem;
-          }
-          .read-more {
-            display: inline-block;
-            margin: 1rem 0;
-            color: black;
-            font-family: "Open Sans";
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            font-size: 0.8rem;
-          }
+      .content {
+        flex: 0 0 50%;
+        .wrapper {
+          max-width: 60%;
+        }
+      }
+      .image {
+        flex: 0 0 50%;
+        img {
+          display: block;
         }
       }
     }
 
     .contact {
-      padding: 5rem 0;
+      padding: 8rem 0;
       background: white;
 
       .wrapper {
         display: grid;
-        grid-template-rows: auto auto;
+        grid-template-rows: auto auto auto;
         grid-template-columns: 1fr 1fr;
-        grid-column-gap: 2rem;
+        grid-column-gap: 3.2rem;
 
         h1 {
           grid-row: 1;
-          font-size: 2rem;
-          line-height: 1.2;
-          margin-bottom: 1rem;
+          font-size: 3.2rem;
+          margin-bottom: 1.6rem;
         }
         .form-container {
           display: flex;
@@ -463,8 +78,8 @@ html {
 
           input {
             display: block;
-            margin-bottom: 1rem;
-            padding: 0.5rem;
+            margin-bottom: 1.6rem;
+            padding: 0.8rem;
             outline: none;
             border: 1px solid #ccc;
             background: white;
@@ -472,35 +87,33 @@ html {
           textarea {
             flex: 1;
             display: block;
-            margin-bottom: 1rem;
-            padding: 0.5rem;
+            padding: 0.8rem;
             outline: none;
             border: 1px solid #ccc;
             background: white;
-          }
-          .button {
-            background: #1976d2;
-            color: white;
-            padding: 0.5rem 1rem;
-            outline: none;
-            font-family: "Open Sans";
-            font-weight: bold;
-            text-transform: uppercase;
-            font-size: 0.8rem;
-            text-decoration: none;
-            border-radius: 3px;
-            max-width: max-content;
-            display: block;
           }
         }
         .map-container {
           grid-row: 2;
           #map {
-            height: 20rem;
+            height: 32rem;
           }
-          p {
-            display: block;
-          }
+        }
+        .button {
+          grid-row:3;
+          background: #1976d2;
+          color: white;
+          padding: 0.8rem 1.6rem;
+          outline: none;
+          font-family: "Open Sans";
+          font-weight: bold;
+          text-transform: uppercase;
+          font-size: 1.2rem;
+          text-decoration: none;
+          border-radius: 3px;
+          max-width: max-content;
+          display: block;
+          margin-top:1.6rem;
         }
       }
     }
@@ -513,49 +126,5 @@ html {
         margin: 0;
       }
     }
-
-    footer {
-      background: #0f0f0f;
-      padding: 2rem 0;
-
-      .wrapper {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-column-gap: 2rem;
-
-        .column {
-          h2 {
-            color: white;
-            font-family: "Open Sans";
-            text-transform: uppercase;
-            margin-bottom: 1rem;
-            font-size: 0.8rem;
-          }
-          a {
-            display: block;
-            width: max-content;
-            margin-bottom: 1rem;
-            color: #aaa;
-            font-family: "Open Sans";
-            font-size: 0.8rem;
-          }
-        }
-      }
-    }
-  }
-}
-
-.wrapper {
-  padding: 1rem;
-  max-width: 80rem;
-  margin: 0 auto;
-}
-
-@keyframes slide {
-  0% {
-    transform: translate3d(0, 0, 0);
-  }
-  100% {
-    transform: translate3d(-200vw, 0, 0);
   }
 }
