--- a/src/assets/styles/blog.scss
+++ b/src/assets/styles/blog.scss
@@ -1,7 +1,7 @@
 html {
   body {
     .hero {
-      background-image: url(/static/trees-bg.png);
+      background-image: url(/static/mystic-gate-bg.png);
     }
     .feed {
       .post {
