--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -94,6 +94,7 @@ html {
         display: grid;
         grid-template-columns: 1fr auto;
         align-items: center;
+        padding:1rem;
 
         .logo {
           color: black;
@@ -103,10 +104,17 @@ html {
           img {
             height: auto;
             max-width: 16rem;
+
+            @media screen and (max-width:600px) {
+              max-width:12rem;
+            }
           }
         }
 
         nav {
+          @media screen and (max-width: 600px) {
+            font-size:0.8rem;
+          }
           a {
             color: black;
             text-decoration: none;
@@ -116,12 +124,14 @@ html {
             text-transform: uppercase;
             font-size: 1.2rem;
 
+            @media screen and (max-width: 600px) {
+              margin-left:1.6rem;
+              font-size:0.8rem;
+            }
+
             &.active, &:hover {
               color: #1976d2;
             }
-          }
-          @media screen and (max-width: 600px) {
-            display:none;
           }
         }
       }
@@ -161,7 +171,7 @@ html {
           margin-bottom: 1rem;
           color: white;
           @media screen and (max-width: 600px) {
-            font-size: 5.8rem;
+            font-size: 5rem;
           }
         }
 
