--- a/src/assets/styles/article.scss
+++ b/src/assets/styles/article.scss
@@ -173,23 +173,11 @@ html {
 
     .article {
       .wrapper {
-        display: grid;
-        grid-template-columns: 61.8% 38.2%;
         .content {
-          padding-right: 1rem;
-          p,
-          h1,
-          h2,
-          h3,
-          h4,
-          h5,
-          h6 {
-            margin-bottom: 1rem;
+          iframe {
+            width: 100%;
+            border:none;
           }
-        }
-        .sidebar {
-          padding-left: 1rem;
-          border-left: 1px solid #ccc;
         }
       }
     }
