--- a/src/assets/styles/models.scss
+++ b/src/assets/styles/models.scss
@@ -1,7 +1,7 @@
 html {
   body {
     .hero {
-      background-image: url(/static/chess-bg.png);
+      background-image: url(/static/space-bg.png);
       background-position: top center;
     }
 
